// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pill /> Spec Snapshots should render selected state 1`] = `
.c1 {
  grid-area: content;
}

.c0 {
  padding: 3px 6px;
  border-radius: 100px;
  border-radius: 4px;
  display: inline-grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  box-sizing: border-box;
  font-size: 14px;
  user-select: none;
  line-height: 16px;
  color: #FFFFFF;
  background-color: #656972;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Pill
    </div>
  </div>
</div>
`;

exports[`<Pill /> Spec Snapshots should render using defaults 1`] = `
.c1 {
  grid-area: content;
}

.c0 {
  padding: 3px 6px;
  border-radius: 100px;
  border-radius: 4px;
  display: inline-grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  box-sizing: border-box;
  font-size: 14px;
  user-select: none;
  line-height: 16px;
  color: #332C3A;
  background-color: rgba(0, 0, 0, 0.1);
}

.c0:hover {
  color: #332C3A;
  background-color: rgba(0, 0, 0, 0.15);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      Pill
    </div>
  </div>
</div>
`;

exports[`<Pill /> Spec Snapshots should support rendering a pill with icon 1`] = `
.c2 {
  width: 16px;
  height: 16px;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c3 {
  grid-area: content;
}

.c0 {
  padding: 3px 6px;
  border-radius: 100px;
  border-radius: 4px;
  display: inline-grid;
  grid-template-areas: 'left-content content right-content';
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  box-sizing: border-box;
  font-size: 14px;
  user-select: none;
  line-height: 16px;
  color: #332C3A;
  background-color: rgba(0, 0, 0, 0.1);
}

.c0:hover {
  color: #332C3A;
  background-color: rgba(0, 0, 0, 0.15);
}

.c1 {
  grid-area: left-content;
  margin-right: 8px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color=""
          height="16"
          name="Checkmark"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
    <div
      class="c3"
    >
      Pill
    </div>
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          color=""
          height="16"
          name="Checkmark"
          preserveaspectratio="none"
          viewbox="0 0 16 16"
          width="16"
        />
      </div>
    </div>
  </div>
</div>
`;
